Fix 1px gap on svgs;

--- a/css/index.css
+++ b/css/index.css
@@ -81,6 +81,7 @@ svg.trim {
   display: block;
   width: 100%;
   height: 2vw;
+  margin: -1px 0;
 }
 
 .features {
